宏库奇穴预览修订

--- a/template/macro/forum/sidebar.htm
+++ b/template/macro/forum/sidebar.htm
@@ -2,30 +2,30 @@
 <h2 class="default-sidebar-title m-macro-nav-title">分类导航<a class="u-more" href="./macro" title="全部">全部</a></h2>
 <div class="default-sidebar-content m-macro-nav">
 	<ul>
-		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=396&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="ty" ></i>通用</a></li>
-		<li><a class="new" href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=400&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="bd" ></i>霸刀<em></em></a></li>
-		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=394&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="mw" ></i>莫问</a></li>
-		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=395&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="xz"></i>相知</a></li>
-		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=374&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="bx" ></i>冰心</a></li>
-		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=375&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="nx"></i>云裳</a></li>
-		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=376&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="hj"></i>花间</a></li>
-		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=377&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="nh"></i>离经</a></li>
-		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=378&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="dj"></i>毒经</a></li>
-		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=379&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="nd"></i>补天</a></li>
-		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=380&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="axzy"></i>傲血</a></li>
-		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=381&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="tll"></i>铁牢</a></li>
-		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=382&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="fysj" ></i>焚影</a></li>
-		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=383&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="mjt"></i>明尊</a></li>
-		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=384&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="yj" ></i>易筋</a></li>
-		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=385&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="xs"  ></i>洗髓</a></li>
-		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=386&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="qc"></i>紫霞</a></li>
-		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=387&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="jc" ></i>太虚</a></li>
-		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=388&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="tl" ></i>天罗</a></li>
-		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=389&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="jy" ></i>惊羽</a></li>
-		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=390&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="cyj" ></i>分山</a></li>
-		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=391&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="tgy"></i>铁骨</a></li>
-		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=392&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="cj"  ></i>藏剑</a></li>
-		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=393&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="gb" ></i>丐帮</a></li>
+		<li {if ($_GET['typeid']=="396")} class="on"{/if}><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=396&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="ty" ></i>通用</a></li>
+		<li {if ($_GET['typeid']=="400")} class="on"{/if}><a class="new" href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=400&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="bd" ></i>霸刀<em></em></a></li>
+		<li {if ($_GET['typeid']=="394")} class="on"{/if}><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=394&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="mw" ></i>莫问</a></li>
+		<li {if ($_GET['typeid']=="395")} class="on"{/if}><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=395&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="xz"></i>相知</a></li>
+		<li {if ($_GET['typeid']=="374")} class="on"{/if}><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=374&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="bx" ></i>冰心</a></li>
+		<li {if ($_GET['typeid']=="375")} class="on"{/if}><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=375&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="nx"></i>云裳</a></li>
+		<li {if ($_GET['typeid']=="376")} class="on"{/if}><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=376&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="hj"></i>花间</a></li>
+		<li {if ($_GET['typeid']=="377")} class="on"{/if}><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=377&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="nh"></i>离经</a></li>
+		<li {if ($_GET['typeid']=="378")} class="on"{/if}><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=378&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="dj"></i>毒经</a></li>
+		<li {if ($_GET['typeid']=="379")} class="on"{/if}><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=379&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="nd"></i>补天</a></li>
+		<li {if ($_GET['typeid']=="380")} class="on"{/if}><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=380&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="axzy"></i>傲血</a></li>
+		<li {if ($_GET['typeid']=="381")} class="on"{/if}><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=381&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="tll"></i>铁牢</a></li>
+		<li {if ($_GET['typeid']=="382")} class="on"{/if}><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=382&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="fysj" ></i>焚影</a></li>
+		<li {if ($_GET['typeid']=="383")} class="on"{/if}><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=383&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="mjt"></i>明尊</a></li>
+		<li {if ($_GET['typeid']=="384")} class="on"{/if}><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=384&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="yj" ></i>易筋</a></li>
+		<li {if ($_GET['typeid']=="385")} class="on"{/if}><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=385&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="xs"  ></i>洗髓</a></li>
+		<li {if ($_GET['typeid']=="386")} class="on"{/if}><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=386&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="qc"></i>紫霞</a></li>
+		<li {if ($_GET['typeid']=="387")} class="on"{/if}><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=387&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="jc" ></i>太虚</a></li>
+		<li {if ($_GET['typeid']=="388")} class="on"{/if}><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=388&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="tl" ></i>天罗</a></li>
+		<li {if ($_GET['typeid']=="389")} class="on"{/if}><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=389&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="jy" ></i>惊羽</a></li>
+		<li {if ($_GET['typeid']=="390")} class="on"{/if}><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=390&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="cyj" ></i>分山</a></li>
+		<li {if ($_GET['typeid']=="391")} class="on"{/if}><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=391&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="tgy"></i>铁骨</a></li>
+		<li {if ($_GET['typeid']=="392")} class="on"{/if}><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=392&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="cj"  ></i>藏剑</a></li>
+		<li {if ($_GET['typeid']=="393")} class="on"{/if}><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=393&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="gb" ></i>丐帮</a></li>
 	</ul>
 </div>
 
