奇穴图览版优化

--- a/css/module/plugin/e-qixue.less
+++ b/css/module/plugin/e-qixue.less
@@ -1,14 +1,15 @@
 .e-qixue{
 	.clearfix;
-	padding:5px 6px 8px 12px;
+	padding:5px 6px 3px 12px;
 	background-color:#233;
 	border:3px solid #888;
 	.r(4px);
-	.h(67px);
+	min-height:67px;
 	
 	li{
 		.fl;
 		margin-right:10px;
+		margin-bottom:5px;
 	}
 	img,span{
 		.db;
