优化侧边栏点击区域

--- a/css/user/common/sidebar.less
+++ b/css/user/common/sidebar.less
@@ -3,7 +3,10 @@
 	.pointer;
 	.fz(13px,28px);
 	border-bottom:1px dotted #ddd;
-	padding:10px;
+	a{
+		.db;
+		padding:10px;
+	}
 	&:hover{
 		background-color:#f9f9f9;
 	}
