--- a/css/user/common/sidebar.less
+++ b/css/user/common/sidebar.less
@@ -2,20 +2,24 @@
 	user-select:none;
 	.pointer;
 	.fz(13px,28px);
-	border-bottom:1px dotted #ddd;
+	margin:5px 0;
 	a{
 		.db;
-		padding:10px;
+		padding: 2px 10px;
+	    border: 1px solid #eee;
+	    background: #fafafa;
+	    .r(3px);
 	}
-	&:hover{
-		background-color:#f9f9f9;
+	a:hover{
+		background-color:#f5f5f5;
+		border:1px solid #e3e3e3;
 	}
 	&.on{
 		.bold;
 		.color(#0F75BF,#0F75BF,#0F75BF);
 	}
 	i{
-		.dbi;.y;.size(18px);margin-right:8px;margin-top:-2px;
+		.dbi;.y;.size(14px);margin-right:8px;margin-top:-2px;
 
 		background-size:100% auto;
 		background-repeat:no-repeat;
@@ -32,7 +36,7 @@
 .u-user-os-other{background-image:url('@{url}user/sidebar/lock.png');}
 
 .user-sidebar-list{
-	padding-top:5px;
+	//padding-top:5px;
 	.color(#888,#555,@blue-link);
 
 	li{
@@ -41,6 +45,7 @@
 	}
 	.on,li:hover{
 		background-color:#f7f7f7;
+		.r(28px);
 	}
 	.on{
 		//.bold;
