--- a/css/user/common/sidebar.less
+++ b/css/user/common/sidebar.less
@@ -9,14 +9,25 @@
 	    border: 1px solid #eee;
 	    background: #fafafa;
 	    .r(3px);
+	    .pr;
 	}
 	a:hover{
 		background-color:#f5f5f5;
 		border:1px solid #e3e3e3;
 	}
+	a em{
+		right:10px;.ct(y,10px);
+		content:'';
+		.db;
+		.size(10px);
+		background:url('@{url}user/sidebar/down.png') no-repeat 0 0;
+	}
 	&.on{
 		.bold;
 		.color(#0F75BF,#0F75BF,#0F75BF);
+		em{
+			background-image:url('@{url}user/sidebar/up.png');
+		}
 	}
 	i{
 		.dbi;.y;.size(14px);margin-right:8px;margin-top:-2px;
