--- a/css/module/ui/mark.less
+++ b/css/module/ui/mark.less
@@ -1,47 +1,81 @@
 .i-mark{
-	.db;.size(58px);
+	.db;.size(47px,48px);
 	.pa;.rt(0,0);
 	background-position:right top;
 	background-repeat:no-repeat;
 }
 
-.i-mark-red{
+.i-mark-os{
+	.size(56px);
+}
+
+//os
+.i-mark-beta{
 	&:extend(.i-mark);
-	background-image:url('@{url}index/mark-red.png');
+	background-image:url('@{url}index/mark-beta.png');
+}
+
+//common
+.i-mark-baoliao{
+	&:extend(.i-mark);
+	background-image:url('@{url}index/mark-baoliao.png');
+}
+.i-mark-diaoyan{
+	&:extend(.i-mark);
+	background-image:url('@{url}index/mark-diaoyan.png');
+}
+
+.i-mark-gonglue{
+	&:extend(.i-mark);
+	background-image:url('@{url}index/mark-gonglue.png');
 }
 .i-mark-hot{
 	&:extend(.i-mark);
 	background-image:url('@{url}index/mark-hot.png');
 }
+.i-mark-huodong{
+	&:extend(.i-mark);
+	background-image:url('@{url}index/mark-huodong.png');
+}
 
-.i-mark-green{
+.i-mark-zhongyao{
 	&:extend(.i-mark);
-	background-image:url('@{url}index/mark-green.png');
+	background-image:url('@{url}index/mark-zhongyao.png');
 }
-.i-mark-beta{
+.i-mark-jiaocheng{
 	&:extend(.i-mark);
-	background-image:url('@{url}index/mark-beta.png');
+	background-image:url('@{url}index/mark-jiaocheng.png');
 }
+
 .i-mark-new{
 	&:extend(.i-mark);
-	background-image:url('@{url}index/mark-new2.png');
+	background-image:url('@{url}index/mark-new.png');
 }
-
-.i-mark-blue{
+.i-mark-tuiguang{
 	&:extend(.i-mark);
-	background-image:url('@{url}index/mark-blue.png');
+	background-image:url('@{url}index/mark-tuiguang.png');
 }
-.i-mark-standard{
+.i-mark-tuijian{
 	&:extend(.i-mark);
-	background-image:url('@{url}index/mark-st.png');
+	background-image:url('@{url}index/mark-tuijian.png');
 }
-
-.i-mark-yellow{
+.i-mark-doc{
 	&:extend(.i-mark);
-	background-image:url('@{url}index/mark-yellow.png');
+	background-image:url('@{url}index/mark-doc.png');
 }
-.i-mark-com{
+.i-mark-yule{
 	&:extend(.i-mark);
-	background-image:url('@{url}index/mark-com.png');
+	background-image:url('@{url}index/mark-yule.png');
 }
-
+.i-mark-zt{
+	&:extend(.i-mark);
+	background-image:url('@{url}index/mark-zt.png');
+}
+.i-mark-source{
+	&:extend(.i-mark);
+	background-image:url('@{url}index/mark-source.png');
+}
+.i-mark-zz{
+	&:extend(.i-mark);
+	background-image:url('@{url}index/mark-zz.png');
+}
