--- a/template/default/jx3pve/c_compass_mini.htm
+++ b/template/default/jx3pve/c_compass_mini.htm
@@ -1,4 +1,4 @@
-<div class="c-compass">
+<div class="c-compass c-compass-mini">
     <ul>
         <li><a href="./bbs">
             <i class="u-bbs"><img src="http://img.jx3pve.com/img/system/sitemap/bbs.png" alt="论坛交流"></i>
@@ -73,14 +73,6 @@
             <i class="u-skilltree"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
             <span>神秘</span><em></em>
         </a></li>
-        <!-- <li class="u-locked"><a href="javascript:;">
-            <i class="u-keju"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
-            <span>神秘</span><em></em>
-        </a></li>
-        <li class="u-locked"><a href="javascript:;">
-            <i class="u-petmap"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
-            <span>神秘</span><em></em>
-        </a></li> -->
         
         <li class="u-locked"><a href="javascript:;">
             <i class="u-computer"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
@@ -115,8 +107,7 @@
             <span>竞技</span><em></em>
         </a></li>
 
-        <!-- when mobile click show all , pc show all default -->
-        <li class="u-more"><a href="javascript:;">
+        <li class="u-more"><a href="./sitemap">
             <i class="u-sitemap"><img src="http://img.jx3pve.com/img/system/sitemap/more.png" alt="更多"></i>
         </a></li>
     </ul>
