--- a/template/yylmacro/portal/index.htm
+++ b/template/yylmacro/portal/index.htm
@@ -32,7 +32,7 @@
                 </div>
             </div>
 
-            <!--{template jx3pve/c_compass}-->
+            <!--{template jx3pve/c_compass_mini}-->
         </div>
 
         <div class="index-sidebar">
