老栏目移动端显示兼容，compass修订增加站外提示

--- a/css/global/layout.less
+++ b/css/global/layout.less
@@ -55,7 +55,9 @@ body{
 		padding:0 10px;
 	}
 	//固定为1180px的老页面
+	.ua-oldpc body{
+		min-width:1180px;
+	}
 	.ua-oldpc .wp{
 		.w(@wp);
-		min-width:1180px;
 	}
