--- a/css/module/ui/mark.less
+++ b/css/module/ui/mark.less
@@ -79,3 +79,16 @@
 	&:extend(.i-mark);
 	background-image:url('@{url}index/mark-zz.png');
 }
+
+.i-mark-fail{
+	&:extend(.i-mark);
+	background-image:url('@{url}index/mark-fail.png');
+}
+.i-mark-stop{
+	&:extend(.i-mark);
+	background-image:url('@{url}index/mark-stop.png');
+}
+.i-mark-will{
+	&:extend(.i-mark);
+	background-image:url('@{url}index/mark-will.png');
+}
