--- a/template/default/jx3pve/c_compass_mini.htm
+++ b/template/default/jx3pve/c_compass_mini.htm
@@ -45,19 +45,19 @@
             <i class="u-golden"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
             <span>神秘</span><em></em>
         </a></li>
-        <li><a href="https://www.j3pz.com/" target="_blank">
+        <li class="u-link"><a href="https://www.j3pz.com/" target="_blank">
             <i class="u-peizhuang"><img src="http://img.jx3pve.com/img/system/sitemap/peizhuang.png" alt="配装模拟"></i>
             <span>配装</span><em></em>
         </a></li>
-        <li><a href="https://www.j3pz.com/tools/haste/" target="_blank">
+        <li class="u-link"><a href="https://www.j3pz.com/tools/haste/" target="_blank">
             <i class="u-speed"><img src="http://img.jx3pve.com/img/system/sitemap/speed.png" alt="加速计算"></i>
             <span>急速</span><em></em>
         </a></li>
-        <li><a href="http://www.j3ui.com/wiki" target="_blank">
+        <li class="u-link"><a href="http://www.j3ui.com/wiki" target="_blank">
             <i class="u-chengjiu"><img src="http://img.jx3pve.com/img/system/sitemap/chengjiu.png" style="left:-5px;width:120%;top:-2px;" alt="成就百科"></i>
             <span>成就</span><em></em>
         </a></li>
-        <li><a href="http://jx3.hightman.cn/weixin/data.php?q=" target="_blank">
+        <li class="u-link"><a href="http://jx3.hightman.cn/weixin/data.php?q=" target="_blank">
             <i class="u-haiman"><img src="http://img.jx3pve.com/img/system/sitemap/haiman.png" alt="海鳗游戏数据"></i>
             <span>游戏数据</span><em class="i-mark-new"></em>
         </a></li>
