--- a/css/system/sitemap.less
+++ b/css/system/sitemap.less
@@ -9,9 +9,14 @@
 }
 
 .m-sitemap-more{
-	border-top:1px dashed #ddd;
-	padding-top:20px;
+	
+	img{.y;margin-right:3px;margin-top:-3px;}
+	.fz(12px,2);color:#888;
+
 	margin-top:20px;
+	padding:10px 5px;
+	border-top:1px dashed #ddd;
+	
 }
 .m-sitemap-block{
 	margin-bottom:10px;
@@ -55,7 +60,7 @@
 	.sitemap-container{padding:0;}
 	.wp{padding:0;}
 
-	.m-sitemap-more{.none;}
+	//.m-sitemap-more{.none;}
 	.m-sitemap-block{
 		padding:0;margin-bottom:0;
 		h2,li{
