--- a/template/about/portal/portal_topic_sitemap.htm
+++ b/template/about/portal/portal_topic_sitemap.htm
@@ -1,7 +1,7 @@
 <!--{subtemplate common/header_m}-->
 <link rel="stylesheet" href="http://css.jx3pve.com/css/system/sitemap.css" type="text/css" />
 <header class="i-header">
-	<div class="i-header-title">站点地图</div>
+	<div class="i-header-title">导航</div>
 </header>
 <div class="sitemap-container">
 	<div class="wp">
@@ -18,79 +18,8 @@
 		</div>
 
 		<div class="m-sitemap-more">
-			<div class="m-sitemap-block m-sitemap-about">
-				<h2>其它栏目</h2>
-				<ul>
-					<li><a href="./fb">副本专题<em>(已停更)</em></a></li>
-					<li><a href="./cloud">超级宏官网<em>(已和谐)</em></a></li>
-					<li><a href="./forum.php?mod=forumdisplay&fid=85">超级宏论坛<em>(已和谐)</em></a></li>
-					<li><a href="./group.php">群组<em>(私版)</em></a></li>
-				</ul>
-			</div>
-
-			<div class="m-sitemap-block m-sitemap-member">
-				<h2>账号系统</h2>
-				<ul>
-					<li><a href="./login">登录</a></li>
-					<li><a href="./register">注册</a></li>
-					<li><a href="./misc.php?mod=buyinvitecode">邀请码</a></li>
-					<li><a href="./member.php?mod=logging&action=login">找回密码</a></li>
-				</ul>
-			</div>
-
-			<div class="m-sitemap-block m-sitemap-user">
-				<h2>用户系统</h2>
-				<ul>
-					<li><a href="./home.php?mod=space&do=pm">消息</a></li>
-					<li><a href="./home.php?mod=spacecp&ac=credit&op=log">积分</a></li>
-					<li><a href="./home.php?mod=spacecp&ac=profile&op=password">资料</a></li>
-					<li><a href="./forum.php?mod=guide&view=my&type=thread">帖子</a></li>
-					<li><a href="./home.php?mod=space&do=blog">空间</a></li>
-					<li><a href="./home.php?mod=task">扩展</a></li>
-					<li><a href="./home.php?mod=spacecp&ac=sendmail">设置</a></li>
-					<li><a href="./home.php?mod=spacecp&ac=promotion">其它</a></li>
-				</ul>
-			</div>
-
-			<div class="m-sitemap-block m-sitemap-help">
-				<h2>帮助系统</h2>
-				<ul>
-					<li><a href="./faq">FAQ</a></li>
-					<li><a href="./feedback">反馈中心</a></li>
-					<li><a href="./push">推送头条</a></li>
-				</ul>
-			</div>
-
-			<div class="m-sitemap-block m-sitemap-system">
-				<h2>网站系统</h2>
-				<ul>
-					<li><a href="./sitemap">站点地图</a></li>
-					<li><a href="./news/">历史头条</a></li>
-				</ul>
-				<ul>
-					<li><a href="http://search.jx3pve.com/cse/search?s=16227720870024914123&entry=1&q=" target="_blank">搜索系统</a></li>
-					<li><a href="./system/404.html" target="_blank">404错误引导</a></li>
-					<li><a href="./misc.php?mod=stat"  target="_blank">站点统计<em>(PC版)</em></a></li>
-					<li><a href="./archiver"  target="_blank">Archiver<em>(PC版)</em></a></li>
-				</ul>
-			</div>
-
-			<div class="m-sitemap-block m-sitemap-about">
-				<h2>关于我们</h2>
-				<ul>
-					<li><a href="./portal.php?mod=topic&topicid=116">网站简介</a></li>
-					<li><a href="./forum.php?mod=forumdisplay&fid=392&filter=sortid&sortid=24">更新日志</a></li>
-					<li><a href="./portal.php?mod=topic&topicid=113">版权声明</a></li>
-					<li><a href="./portal.php?mod=topic&topicid=114">免责声明</a></li>
-					<li><a href="./forum.php?mod=forumdisplay&fid=392&filter=sortid&sortid=25">管理团队</a></li>
-					<li><a href="./portal.php?mod=topic&topicid=64">签约作者</a></li>
-					<li><a href="./forum.php?mod=forumdisplay&fid=392&filter=sortid&sortid=26">加入我们</a></li>
-					<li><a href="./portal.php?mod=topic&topicid=115">友情链接</a></li>
-					<li><a href="./portal.php?mod=topic&topicid=65">合作联系</a></li>
-				</ul>
-			</div>
+			<img src="http://img.jx3pve.com/img/system/sitemap/link.png" alt="">标识代表该为站外栏目，与本站非同一套账号系统。
 		</div>
-
 		
 	</div>
 </div>
