--- a/template/default/jx3pve/c_compass.htm
+++ b/template/default/jx3pve/c_compass.htm
@@ -45,19 +45,19 @@
             <i class="u-golden"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
             <span>神秘</span><em></em>
         </a></li>
-        <li><a href="https://www.j3pz.com/" target="_blank">
+        <li class="u-link"><a href="https://www.j3pz.com/" target="_blank">
             <i class="u-peizhuang"><img src="http://img.jx3pve.com/img/system/sitemap/peizhuang.png" alt="配装模拟"></i>
             <span>配装</span><em></em>
         </a></li>
-        <li><a href="https://www.j3pz.com/tools/haste/" target="_blank">
+        <li class="u-link"><a href="https://www.j3pz.com/tools/haste/" target="_blank">
             <i class="u-speed"><img src="http://img.jx3pve.com/img/system/sitemap/speed.png" alt="加速计算"></i>
             <span>急速</span><em></em>
         </a></li>
-        <li><a href="http://www.j3ui.com/wiki" target="_blank">
+        <li class="u-link"><a href="http://www.j3ui.com/wiki" target="_blank">
             <i class="u-chengjiu"><img src="http://img.jx3pve.com/img/system/sitemap/chengjiu.png" style="left:-5px;width:120%;top:-2px;" alt="成就百科"></i>
             <span>成就</span><em></em>
         </a></li>
-        <li><a href="http://jx3.hightman.cn/weixin/data.php?q=" target="_blank">
+        <li class="u-link"><a href="http://jx3.hightman.cn/weixin/data.php?q=" target="_blank">
             <i class="u-haiman"><img src="http://img.jx3pve.com/img/system/sitemap/haiman.png" alt="海鳗游戏数据"></i>
             <span>游戏数据</span><em class="i-mark-new"></em>
         </a></li>
@@ -119,5 +119,26 @@
         <li class="u-more"><a href="javascript:;">
             <i class="u-sitemap"><img src="http://img.jx3pve.com/img/system/sitemap/more.png" alt="更多"></i>
         </a></li>
+        <li class="u-old"><a href="./jx3pveos">
+            <i class="u-jx3pveos"><img src="http://os.jx3pve.com/logo.png" alt="JX3PVE官方工具集"></i>
+            <span>工具集</span><em class="i-mark-will"></em>
+        </a></li>
+        <li class="u-old"><a href="./fb">
+            <i class="u-fb"><img src="http://img.jx3pve.com/img/system/sitemap/fb.png" alt="副本专题"></i>
+            <span>副本专题</span><em class="i-mark-stop"></em>
+        </a></li>
+        <li class="u-old"><a href="./group.php">
+            <i class="u-group"><img src="http://img.jx3pve.com/img/system/sitemap/group.png" alt="群组"></i>
+            <span>群组</span><em class="i-mark-stop"></em>
+        </a></li>
+        <li class="u-old"><a href="./cloud">
+            <i class="u-yylmacro"><img src="http://img.jx3pve.com/img/system/sitemap/yylmacro.png" alt="超级宏官网"></i>
+            <span>超级宏官网</span><em class="i-mark-fail"></em>
+        </a></li>
+        <li class="u-old"><a href="./forum.php?mod=forumdisplay&fid=85">
+            <i class="u-yylmacrobbs"><img src="http://img.jx3pve.com/img/system/sitemap/yylmacrobbs.png" alt="超级宏官方论坛"></i>
+            <span>超级宏论坛</span><em class="i-mark-fail"></em>
+        </a></li>
+
     </ul>
 </div>
