--- a/template/yylmacro/group/group_attentiongroup.htm
+++ b/template/yylmacro/group/group_attentiongroup.htm
@@ -1,4 +1,4 @@
-<!--{template common/header}-->
+<!--{template common/header_pc}-->
 <link rel="stylesheet" href="http://css.jx3pve.com/css/portal/group.css" type="text/css" />
 
 	<h3 class="flb">
