在线应用与工具栏目合并

--- a/css/app/app.less
+++ b/css/app/app.less
@@ -6,5 +6,6 @@
 @import url('module/footer.less');
 @import url('module/icon.less');
 @import url('module/dialog.less');
-@import url('module/sidebar.less');
-@import url('module/index.less');
+@import url('../pve/tool/sidebar.less');
+/*@import url('module/sidebar.less');
+@import url('module/index.less');*/
