--- a/css/pve/tool/sidebar.less
+++ b/css/pve/tool/sidebar.less
@@ -1,68 +1,64 @@
 .m-tool-nav{
-	padding:5px 0;
-	li{
-		margin-bottom:5px;
-		background-color:#fff;
-		border:1px solid #ddd;
-		border-radius:3px;
-		a{
-			.db;line-height:24px;
-			padding:5px 10px;
-
-			i{.size(24px);.dbi;.y(top);margin-right:6px;}
-
-			em{
-				.fr;
-				.fz(12px);color:#999;
-				text-transform:uppercase;
-				letter-spacing:0.5px;
-				//transform:scale(0.8);
-				font-family: "Trebuchet MS",'Helvetica Neue',Helvetica,Arial,sans-serif;
-				.none;
-			}
-			&.new{
-				background:url('@{url}forum/new.gif') no-repeat 100px 10px;
-			}
+	a{
+		em{
+			.fr;
+			.fz(12px);color:#999;
+			text-transform:uppercase;
+			letter-spacing:0.5px;
+			font-family: "Trebuchet MS",'Helvetica Neue',Helvetica,Arial,sans-serif;
+			.none;
 		}
-		&:hover,&.on{
-			background-color:#f7f7f7;
-			box-shadow: 0 0 2px #eee inset;
-			transition:0.15s ease-in-out;
-			em{.db;animation:fadeIn 0.2s ease-in-out;}
+		&.new{
+			background:url('@{url}forum/new.gif') no-repeat 100px 10px;
 		}
-		.u-keyboard i{
-			background:url('@{url}tool/keyboard.png') no-repeat 0 0;
+	}
+	li:hover,li.on{
+		em{.db;animation:fadeIn 0.2s ease-in-out;}
+	}
+	.u-keyboard i{
+		background:url('@{url}tool/keyboard.png') no-repeat 0 0;
+	}
+	.u-role i{
+		background:url('@{url}tool/role.png') no-repeat 0 0;
+	}
+	.u-tool i{
+		background:url('@{url}tool/tool.png') no-repeat 0 0;
+	}
+	.u-app i{
+		background:url('@{url}tool/app.png') no-repeat 0 0;
+	}
+	.u-snow i{
+		background:url('@{url}tool/snow.png') no-repeat 0 0;
+	}
+	.u-plugin i{
+		background:url('@{url}tool/plugin.png') no-repeat 0 0;
+	}
+	.u-book i{
+		background:url('@{url}tool/book.png') no-repeat 0 0;
+	}
+	.u-snow i{
+		background:url('@{url}tool/snow.png') no-repeat 0 0;
+	}
+	.u-image i{
+		background:url('@{url}tool/source.png') no-repeat 0 0;
+	}
+	.u-book i{
+		background:url('@{url}tool/book.png') no-repeat 0 0;
+	}
+	.u-design i{
+		background:url('@{url}tool/design.png') no-repeat 0 0;
+	}
+}
+.app-list{
+	i{
+		img{
+			.db;
+			max-width:100%;
+			max-height:100%;
 		}
-		.u-role i{
-			background:url('@{url}tool/role.png') no-repeat 0 0;
-		}
-		.u-tool i{
-			background:url('@{url}tool/tool.png') no-repeat 0 0;
-		}
-		.u-app i{
-			background:url('@{url}tool/app.png') no-repeat 0 0;
-		}
-		.u-snow i{
-			background:url('@{url}tool/snow.png') no-repeat 0 0;
-		}
-		.u-plugin i{
-			background:url('@{url}tool/plugin.png') no-repeat 0 0;
-		}
-		.u-book i{
-			background:url('@{url}tool/book.png') no-repeat 0 0;
-		}
-		.u-snow i{
-			background:url('@{url}tool/snow.png') no-repeat 0 0;
-		}
-		.u-image i{
-			background:url('@{url}tool/source.png') no-repeat 0 0;
-		}
-		.u-book i{
-			background:url('@{url}tool/book.png') no-repeat 0 0;
-		}
-		.u-design i{
-			background:url('@{url}tool/design.png') no-repeat 0 0;
-		}
+	}
+	a:hover{
+		color:@blue-link;
 	}
 }
 .m-tool-search,.m-snow-search{
@@ -83,6 +79,31 @@
 		.color(#666,#222);
 	}
 }
+.m-tool-nav,.app-list{
+	padding:5px 0;
+
+	li{
+		margin-bottom:5px;
+		border-radius:3px;
+	}
+
+	a{
+		.db;
+		.lh(24px);
+		padding:5px 10px;
+	}
+
+	i{
+		.size(24px);.dbi;.y(top);margin-right:6px;
+	}
+
+	li:hover,li.on{
+		background-color:#f7f7f7;
+		//box-shadow: 0 0 2px #eee inset;
+		//transition:0.15s ease-in-out;
+	}
+}
+
 /*.m-tool-task{
 	.u-list-1{background:url('@{url}medal/tool_1.gif') no-repeat 0 center;}
 	.u-list-2{background:url('@{url}medal/tool_2.gif') no-repeat 0 center;}
