在线应用修订

--- a/css/app/servers/servers_pc.less
+++ b/css/app/servers/servers_pc.less
@@ -1,3 +1,6 @@
+@import url('../../public/base.less');
+@import url('../../global/var.less');
+
 .app-servers-list{
 	background-color:#fff;
 	margin:10px auto;
@@ -56,3 +59,4 @@
 .app-servers-list-item-normal{
 	&:hover{background-color:#f7f7f7;}
 }
+
