--- a/template/tool/portal/portal_topic_servers_m.htm
+++ b/template/tool/portal/portal_topic_servers_m.htm
@@ -1,5 +1,5 @@
 <!--{template common/header_m}-->
-<link rel="stylesheet" href="http://css.jx3pve.com/css/app/servers_m.css" type="text/css"/>
+<link rel="stylesheet" href="http://css.jx3pve.com/css/app/servers/servers_m.css" type="text/css"/>
 <div class="app-header">
 	<h1 class="m-title">开服监控与记录</h1>
 	<a class="m-back" id="top-back" href="javascript:void(0)">&lt; 返回查找</a>
