--- a/template/tool/portal/portal_topic_servers_pc.htm
+++ b/template/tool/portal/portal_topic_servers_pc.htm
@@ -5,7 +5,7 @@
     }
 </script>
 <link rel="stylesheet" href="http://css.jx3pve.com/css/app/app.css" type="text/css" />
-<link rel="stylesheet" href="http://css.jx3pve.com/css/app/servers_pc.css" type="text/css" />
+<link rel="stylesheet" href="http://css.jx3pve.com/css/app/servers/servers_pc.css" type="text/css" />
 <div class="app-container">
     <input type="hidden" id="userGroupId" value="$_G[groupid]">
     <input type="hidden" id="userUID" value="$_G[uid]">
