--- a/css/app/module/footer.less
+++ b/css/app/module/footer.less
@@ -9,10 +9,12 @@
 	.m-author{
 		.clear;
 		//border-top:1px solid #ddd;
-		padding-top:20px;
-		.color(#999,@bluex,@yel);
+		margin-top:5px;
+		.color(#999,@blue-dark,@blue-dark);
+		a:hover{text-decoration:underline;}
 		.x(right);
-		b{background-color:@bluex;color:#fff;padding:2px 5px;margin:0 10px;}
+		
+		b{background-color:#ccc;color:#fff;padding:2px 5px;margin:0 10px;}
 	}
 
 	
