--- a/css/app/servers/servers_m.less
+++ b/css/app/servers/servers_m.less
@@ -1,6 +1,6 @@
-@import url('../public/base.less');
-@import url('../global/var.less');
-@import url('../global/color.less');
+@import url('../../public/base.less');
+@import url('../../global/var.less');
+@import url('../../global/color.less');
 
 body{
 	background-color:#f7f7f7;
@@ -81,6 +81,7 @@ body{
 		.size(40px,100%);
 		.indent;.btn-reset;
 		background:url('@{url}app/common/search-btn.png') no-repeat center center;
+		box-shadow:none;
 	}
 }
 .u-btn-go{
