应用栏目关联导航栏工具的状态，修订compass在站点地图默认全部显示
Signed-off-by: iRuxu <17229398@qq.com>

--- a/css/module/common/c-compass.less
+++ b/css/module/common/c-compass.less
@@ -75,6 +75,9 @@
 	.u-more{
 		.none;
 	}
+	.u-old{
+		.db;
+	}
 	
 }
 .ua-responsive .screen-s .m-sitemap-compass .c-compass{
@@ -84,7 +87,9 @@
 	.u-locked{
 		.none;
 	}
-	
+	.u-old{
+		.none;
+	}
 }
 
 .c-compass-mini{
