--- a/template/default/jx3pve/c_compass_mini.htm
+++ b/template/default/jx3pve/c_compass_mini.htm
@@ -22,7 +22,7 @@
         </a></li>
         <li><a href="./face">
             <i class="u-face"><img src="http://img.jx3pve.com/img/system/sitemap/face.png" alt="捏脸数据"></i>
-            <span>捏脸</span><em class="i-mark-new"></em>
+            <span>捏脸</span><em class="i-mark-tuijian"></em>
         </a></li>
         <li><a href="./pet">
             <i class="u-pet"><img src="http://img.jx3pve.com/img/system/sitemap/pet.png" alt="宠物攻略"></i>
@@ -43,7 +43,7 @@
         </a></li>
         <li class="u-locked"><a href="javascript:;">
             <i class="u-golden"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
-            <span>神秘</span><em></em>
+            <span>未开启</span><em></em>
         </a></li>
         <li class="u-link"><a href="https://www.j3pz.com/" target="_blank">
             <i class="u-peizhuang"><img src="http://img.jx3pve.com/img/system/sitemap/peizhuang.png" alt="配装模拟"></i>
@@ -59,7 +59,7 @@
         </a></li>
         <li class="u-link"><a href="http://jx3.hightman.cn/weixin/data.php?q=" target="_blank">
             <i class="u-haiman"><img src="http://img.jx3pve.com/img/system/sitemap/haiman.png" alt="海鳗游戏数据"></i>
-            <span>游戏数据</span><em class="i-mark-new"></em>
+            <span>数据</span><em></em>
         </a></li>
         <li><a href="./app/servers">
             <i class="u-servers"><img src="http://img.jx3pve.com/img/system/sitemap/servers.png" alt="开服监控"></i>
@@ -67,24 +67,24 @@
         </a></li>
         <li><a href="./app/faceclean">
             <i class="u-faceclean"><img src="http://img.jx3pve.com/img/system/sitemap/faceclean.png" alt="脸型数据清洗"></i>
-            <span>脸型清洗</span><em></em>
+            <span>脸型清洗</span><em class="i-mark-new"></em>
         </a></li>
         <li class="u-locked"><a href="javascript:;">
             <i class="u-skilltree"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
-            <span>神秘</span><em></em>
+            <span>未开启</span><em></em>
         </a></li>
         
         <li class="u-locked"><a href="javascript:;">
             <i class="u-computer"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
-            <span>神秘</span><em></em>
+            <span>未开启</span><em></em>
         </a></li>
         <li class="u-locked"><a href="javascript:;">
             <i class="u-wall"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
-            <span>神秘</span><em></em>
+            <span>未开启</span><em></em>
         </a></li>
         <li class="u-locked"><a href="javascript:;">
             <i class="u-emot"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
-            <span>神秘</span><em></em>
+            <span>未开启</span><em></em>
         </a></li>
         <li><a href="./team" >
             <i class="u-team"><img src="http://img.jx3pve.com/img/system/sitemap/team.png" alt="团队招募"></i>
