Signed-off-by: unknown <17229398@qq.com>

--- a/css/module/common/c-compass.less
+++ b/css/module/common/c-compass.less
@@ -67,6 +67,10 @@
 	li{
 		.w(33%);
 	}
+	em{
+		.size(32px);
+		background-size:100% auto;
+	}
 	.u-more i{
 		margin-top:45px;
 	}
@@ -97,7 +101,7 @@
 
 	}
 	li{
-		.size(81px);
+		.size(82px);
 	}
 	i{
 		margin-top:15px;
