--- a/css/module/forum/post/c-post-custom.less
+++ b/css/module/forum/post/c-post-custom.less
@@ -80,7 +80,12 @@
 }
 
 .ua-responsive .screen-s .c-post-custom-listitem{
-	.u-title,.u-check{.ps;}
+	.u-text{
+		.lh(32px);
+	}
+	.u-title,.u-check{
+		.ps;
+	}
 	.u-content{
 		margin:0;
 	}
