--- a/css/module/forum/post/c-post-footer.less
+++ b/css/module/forum/post/c-post-footer.less
@@ -36,7 +36,7 @@
 }
 
 .ua-responsive .screen-s .c-post-postbar{
-	.c-post-rule,.u-fromgroup{.none;}
+	.c-post-rule,.u-syncto{.none;}
 }
 
 .u-actopfollow{
