--- a/css/module/forum/post/c-post-header.less
+++ b/css/module/forum/post/c-post-header.less
@@ -8,6 +8,31 @@
 
 .c-post-draftlist{
 	margin-top:5px;
+	.ps !important;
+    background: #FEFEE9;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+
+    ul{
+    	padding: 5px 10px;
+    }
+
+    ul li {
+    	.fz(13px,2) !important;
+    	border-bottom:1px dashed #ddd;
+    }
+
+    ul li a:hover{
+		color:#c00;
+    }
+
+    ul li a .xg1{
+    	.fr;
+    }
+}
+
+.ua-responsive .screen-s .c-post-tab{
+    li.y{.none;}
 }
 
 .c-post-custominfo{
