--- a/css/module/ui/tips.less
+++ b/css/module/ui/tips.less
@@ -26,3 +26,11 @@
 	box-shadow: 0 0 1px #eee inset;
 }
 
+
+.tips(help){
+	background-color:#7dbd20;
+	&:hover{
+		background-color:lighten(#7dbd20,2%);
+	}
+	.color(#fff,#fff,#fff);
+}
