--- a/css/module/forum/post/c-post-attribute.less
+++ b/css/module/forum/post/c-post-attribute.less
@@ -28,11 +28,11 @@
 	height: 28px;
 	line-height: 28px;
 	text-align: center;
-	background: #7DBD20;
 	border-radius: 4px;
-	color: #fff;
 	.pointer;
 	user-select:none;
+
+	.tips(help);
 }
 
 .c-editor-extend{
