--- a/css/module/forum/viewthread/c-fli-title.less
+++ b/css/module/forum/viewthread/c-fli-title.less
@@ -20,7 +20,7 @@
    		margin-left:5px;
 	    border-radius: 2px;
 	    padding: 0 8px;
-	    border:1px solid #999;
+	    border:1px solid #ccc;
 	    color:#666;
 	    &:hover,&.on{
 	    	color:@blue-link;
@@ -43,7 +43,14 @@
 
 
 //mobile
-.ua-responsive .screen-s .c-fli-title{
-	.u-subject{font-size:1.6rem;}
-	.u-only,.u-fav{.none;}
+.ua-responsive .screen-s{
+	.c-fli-top{
+		padding-bottom:4px;
+		margin-bottom:6px;
+	}
+	.c-fli-title{
+		margin-bottom:0;padding-top:5px;
+		.u-subject{font-size:1rem;}
+		.u-only,.u-fav{.none;}
+	}
 }
