--- a/template/default/forum/发布页/post.htm
+++ b/template/default/forum/发布页/post.htm
@@ -149,7 +149,7 @@
 				</ul>
 
 				<div class="c-post-draftlist" id="draftlist_menu" style="display:none">
-					<ul class="xl xl1">
+					<ul class="xl">
 						<!--{if $savethreads}-->
 							<!--{loop $savethreads $savethread}-->
 								<li>
@@ -246,20 +246,23 @@
 					<!--{if helper_access::check_module('follow') && $_GET[action] != 'edit'}-->
 					<span class="u-actopfollow" id="adddynamicspan"><label><input type="checkbox" name="adddynamic" id="adddynamic" value="true" class="pc" {if $_G['forum']['allowfeed'] && !$_G[tid] && empty($_G['forum']['viewperm'])}checked="checked"{/if} />{lang post_relay}</label></span>
 					<!--{/if}-->
-					<!--{if !empty($_G['setting']['pluginhooks']['post_sync_method'])}-->
-						<span>
-							{lang post_sync_method}:
-							<!--{hook/post_sync_method}-->
-						</span>
-					<!--{/if}-->
+					
 					<!--{if $special == 2}-->
 						<label><input type="checkbox" name="continueadd" value="yes" class="pc" />{lang post_message2}</label>
 					<!--{/if}-->
 
 					<!-- 来自群组 -->
-					<!--{if helper_access::check_module('group') && $mygroups && $_G['forum']['status'] != 3}-->
-					<span class="u-fromgroup" id="adddynamicspan"><label>&nbsp;&nbsp;{lang fromgroup}:<select name="mygroupid"><option value="">{lang selectmygroup}</option><!--{loop $mygroups $mygroupid $mygroupname}--><option value="{$mygroupid}__{$mygroupname}" {if $selectgroupid == $mygroupid} selected{/if}>$mygroupname</option><!--{/loop}--></select></label></span>
-					<!--{/if}-->
+					<span class="u-syncto">
+						<!--{if !empty($_G['setting']['pluginhooks']['post_sync_method'])}-->
+							<span>
+								{lang post_sync_method}:
+								<!--{hook/post_sync_method}-->
+							</span>
+						<!--{/if}-->
+						<!--{if helper_access::check_module('group') && $mygroups && $_G['forum']['status'] != 3}-->
+							<span class="u-fromgroup" id="adddynamicspan"><label>&nbsp;&nbsp;{lang fromgroup}:<select name="mygroupid"><option value="">{lang selectmygroup}</option><!--{loop $mygroups $mygroupid $mygroupname}--><option value="{$mygroupid}__{$mygroupname}" {if $selectgroupid == $mygroupid} selected{/if}>$mygroupname</option><!--{/loop}--></select></label></span>
+						<!--{/if}-->
+					</span>
 				</div>
 			</div>
 
