--- a/template/default/forum/发布页/post_editor_body.htm
+++ b/template/default/forum/发布页/post_editor_body.htm
@@ -1,6 +1,6 @@
 <div class="c-post-body">
 
-	<div class="c-post-help"><!--{block/1800}--></div>
+	<div class="c-post-help"><span>正文区域</span><em><!--{block/1800}--></em></div>
 
 	<div id="{$editorid}_body_loading"><img src="{IMGDIR}/loading.gif" width="16" height="16" class="vm" /> {lang e_editor_loading}</div>
 	<div class="edt c-editor" id="{$editorid}_body" style="display: none">
