发布提醒功能优化
Signed-off-by: iRuxu <17229398@qq.com>

--- a/template/default/forum/发布页/post.htm
+++ b/template/default/forum/发布页/post.htm
@@ -128,7 +128,7 @@
 			<!--{if $_GET[action] == 'newthread'}-->
 				<ul class="c-post-tab tb cl mbw">
 					<!--{if $savecount}-->
-						<li class="y"><a id="draftlist" href="javascript:;" class="xi2" onmouseover="showMenu({'ctrlid':'draftlist','ctrlclass':'a','duration':2,'pos':'34'})">{lang draftbox}(<strong>$savecount</strong>)</a></li>
+						<li class="y"><a id="draftlist" href="javascript:;" class="xi2">{lang draftbox}(<strong>$savecount</strong>)</a></li>
 					<!--{/if}-->
 					<!--{if !$_G['forum']['threadsorts']['required'] && !$_G['forum']['allowspecialonly']}--><li$postspecialcheck[0]><a href="javascript:;" onclick="switchpost('forum.php?mod=post&action=newthread')">{lang post_newthread}</a></li><!--{/if}-->
 					<!--{loop $_G['forum']['threadsorts'][types] $tsortid $name}-->
