--- a/css/module/forum/post/c-post-tips.less
+++ b/css/module/forum/post/c-post-tips.less
@@ -1,5 +1,5 @@
 .c-post-tips{
-    padding: 3px 10px;
+    //padding: 3px 10px;
     margin-top: 10px;
 
     hr{
@@ -13,17 +13,15 @@
 	}
 }
 
-#c-post-tips-tg{
+.c-post-tips #c-post-tips-tg{
 	.none;
 	background:~"url('@{url}icon/info.gif') no-repeat right center / auto 80%";
 	color:#888;
 }
 
 #c-post-tips-moretg{
-	
 	margin-bottom:10px;
 	user-select:none;
-
 	color:#c00;
 	.tips(warning);
 	.pr;
@@ -37,23 +35,22 @@
 		i{background:url('@{url}icon/desc.gif') no-repeat 0 0;}
 	}
 }
+.ua-responsive .screen-s{
+	#c-post-tips-moretg{.none;}
+}
 
 #c-post-tips-content{
     border: 1px dashed #eee;
-    padding: 10px;
+    padding:5px 10px;
     color:#333;
     background:#fafafa;
 
     b{.bold;color:#555;}
-    .none;
 }
 
 .ua-responsive .screen-s{
-	#c-post-tips-tg{.db;}
-	#c-post-tips-moretg{.none;}
-	#c-post-tips-content{.none;}
-
 	#c-post-tips-content{
+		.none;
 		.pf;.lt(0,0);.full;
 		z-index: 40;
 	    background-color: rgba(255,255,255,0.95);
