--- a/template/default/forum/发布页/post_header.htm
+++ b/template/default/forum/发布页/post_header.htm
@@ -2,7 +2,7 @@
 	<a class="i-header-back" href="forum.php?mod=forumdisplay&fid=$_G['fid']"><i></i><span>$_G['forum'][name]</span></a>
 	<div class="i-header-title"></div>
 	<div class="i-header-menu">
-		<a class="u-pub i-header-postbtn" id="i-header-postbtn" href="javascript:;"><i></i><span>发布</span></a>
+		<a class="u-all" id="c-post-tips-tg" href="javascript:;"><span>更多</span></a>
 	</div>
 </header>
 
