tab超出修订，自定义字段发布页修订

--- a/css/module/forum/post/c-post-custom.less
+++ b/css/module/forum/post/c-post-custom.less
@@ -80,14 +80,25 @@
 }
 
 .ua-responsive .screen-s .c-post-custom-listitem{
+	border-bottom:none;
+
 	.u-text{
 		.lh(32px);
+		box-shadow:none;
 	}
 	.u-title,.u-check{
 		.ps;
+		.fz(13px,26px);
+	}
+	.u-check{
+		.fr;
+		.w(auto);
+		color:#888;
 	}
 	.u-content{
 		margin:0;
+
+		.u-tip{.fz(12px,2);}
 	}
 	.u-title{
 		.bold;
