--- a/css/module/forum/post/c-post-extra.less
+++ b/css/module/forum/post/c-post-extra.less
@@ -89,21 +89,22 @@
 		.full(x);
 		margin-right:0;
 		margin-bottom:10px;
-		a{.w(auto) !important;}
+		a{.bold;}
 	}
 
 	.c-post-subject .u-subject{
 		margin:0 ;
 		margin-bottom:5px;
-		.u-text{.lh(32px);}
+		.u-text{.lh(32px);box-shadow:none;}
 	}
 
 	.u-check{
 		.ps;float:none;
-		font-size:12px;
+		font-size:13px;
 		.x(right);
 		.db;
 		.w(auto);
+		color:#888;
 	}
 }
 
