--- a/css/module/ui/tab.less
+++ b/css/module/ui/tab.less
@@ -41,7 +41,7 @@
 		overflow-x:auto;
 	}
 	.tb{
-		min-width:100%;
+		max-width:100%;
 		padding:0;
 		li{margin:0;}
 		a{border:none;background: none;padding:5px 15px;}
