自定义字段样式修订

--- a/css/module/forum/post/c-post-body.less
+++ b/css/module/forum/post/c-post-body.less
@@ -83,7 +83,7 @@ body .edt{
 		.w(50%);
 	}
 	#e_tip{}
-	#e_svdsecond{.x(right);}
+	#e_svdsecond{.x(right);padding-right:5px;box-sizing:border-box;}
 	.x(left);
 	padding:5px;
 
