--- a/css/module/forum/post/c-post-custom.less
+++ b/css/module/forum/post/c-post-custom.less
@@ -84,24 +84,25 @@
 
 	.u-text{
 		.lh(32px);
-		box-shadow:none;
 	}
 	.u-title,.u-check{
 		.ps;
-		.fz(13px,26px);
+		.lh(26px);
+	}
+	.u-title{
+		//color:#259;
+		.bold;
 	}
 	.u-check{
 		.fr;
 		.w(auto);
 		color:#888;
+		font-size:12px;
 	}
 	.u-content{
 		margin:0;
 
 		.u-tip{.fz(12px,2);}
-	}
-	.u-title{
-		.bold;
 	}
 	.u-upload{
 		.w(100%);
