--- a/css/module/forum/post/c-post-extra.less
+++ b/css/module/forum/post/c-post-extra.less
@@ -84,6 +84,8 @@
 }
 
 .ua-responsive .screen-s .c-post-title{
+	margin-bottom:20px;
+	
 	.c-post-category{
 		.pr;float:none;
 		.full(x);
@@ -100,8 +102,8 @@
 
 	.u-check{
 		.ps;float:none;
-		font-size:13px;
-		.x(right);
+		font-size:12px;
+		//.x(right);
 		.db;
 		.w(auto);
 		color:#888;
