Signed-off-by: iRuxu <17229398@qq.com>

--- a/css/module/forum/post/c-post-extra.less
+++ b/css/module/forum/post/c-post-extra.less
@@ -97,7 +97,7 @@
 	.c-post-subject .u-subject{
 		margin:0 ;
 		margin-bottom:5px;
-		.u-text{.lh(32px);box-shadow:none;}
+		.u-text{.lh(32px);}
 	}
 
 	.u-check{
