添加ios图标 ，解决移动端屏幕闪动

--- a/template/yylmacro/portal/index.htm
+++ b/template/yylmacro/portal/index.htm
@@ -60,5 +60,12 @@
     </div>
 </div>
 
+<!--{if $_G['mobile']}-->
+手机版
+<!--{else}-->
+电脑版
+<!--{/if}-->
+
+
 <script src="http://js.jx3pve.com/js/page/page-index.js"></script>
 <!--{template common/footer}-->
